@@ -20,13 +20,14 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 @Transactional
 public class SocialHistoryServiceImpl implements SocialHistoryService {
+    private static final String SOCIAL_HISTORY_NOT_FOUND_PREFIX = "Social history not found with id: ";
+
 
     private final SocialHistoryRepository socialHistoryRepository;
     private final PatientRepository patientRepository;
@@ -78,7 +79,7 @@ public class SocialHistoryServiceImpl implements SocialHistoryService {
         log.debug("Fetching social history with id: {}", id);
         
         PatientSocialHistory socialHistory = socialHistoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Social history not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(SOCIAL_HISTORY_NOT_FOUND_PREFIX + id));
 
         return socialHistoryMapper.toResponseDTO(socialHistory);
     }
@@ -96,7 +97,7 @@ public class SocialHistoryServiceImpl implements SocialHistoryService {
         
         return histories.stream()
                 .map(socialHistoryMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -120,7 +121,7 @@ public class SocialHistoryServiceImpl implements SocialHistoryService {
         log.info("Updating social history with id: {}", id);
 
         PatientSocialHistory existingHistory = socialHistoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Social history not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(SOCIAL_HISTORY_NOT_FOUND_PREFIX + id));
 
         // Update staff if changed
         if (requestDTO.getRecordedByStaffId() != null && 
@@ -143,7 +144,7 @@ public class SocialHistoryServiceImpl implements SocialHistoryService {
         log.info("Deleting social history with id: {}", id);
 
         PatientSocialHistory socialHistory = socialHistoryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Social history not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException(SOCIAL_HISTORY_NOT_FOUND_PREFIX + id));
 
         socialHistory.setActive(false);
         socialHistoryRepository.save(socialHistory);
